@startuml theater-service-erd

entity Theaters {
    theater_id : UUID PRIMARY KEY
    trace_id: UUID NOT NULL UNIQUE
    name : string NOT NULL
    address : string NOT NULL
}

entity Rooms {
    room_id : UUID PRIMARY KEY
    theater_id : UUID NOT NULL
    trace_id: UUID NOT NULL UNIQUE
    name : string NOT NULL
    ' capacity : int NOT NULL // should be generated from querying seats entity (correlated by room_id)'
}

entity Seats {
    seat_id : UUID PRIMARY KEY
    room_id : UUID NOT NULL
    row : char NOT NULL
    column : int NOT NULL
    unique_constraint(room_id, row, column)
}

entity Showtimes {
    showtime_id : UUID PRIMARY KEY
    movie_id : UUID NOT NULL
    room_id : UUID NOT NULL
    trace_id: UUID NOT NULL UNIQUE
    start_time : datetime NOT NULL
    ' available_seats : int // should be generated from querying seats and tickets entity (correlated by room_id)'
}

entity Tickets {
    ticket_id : UUID PRIMARY KEY
    theater_id : UUID NOT NULL
    room_id : UUID NOT NULL
    seat_id : UUID NOT NULL
    showtime_id : UUID NOT NULL
    reservation_id : UUID NOT NULL
    trace_id: UUID NOT NULL UNIQUE
    status : enum (reserved, available) NOT NULL
    unique_constraint(seat_id, showtime_id)
}

Theaters ||--|{ Rooms : "has"

Rooms ||--|{ Seats : "has"
Rooms ||--o{ Showtimes : "has"

Tickets ||--|| Theaters : "belongs to"
Tickets ||--|| Rooms : "belongs to"
Tickets ||--|| Seats : "belongs to"
Tickets ||--|| Showtimes : "belongs to"

@enduml
